--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="text_view_age">Возраст</string>
     <string name="image_view_photo">фото</string>
     <string name="edit_text_phone">Номер телефона</string>
+    <string name="title_toolbar">Карточка данных</string>
 </resources>
